add slayer form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>{{title}}</h1>
 <app-slayers></app-slayers>
+<app-add-slayer></app-add-slayer>
 <app-messages></app-messages>
   
 <router-outlet></router-outlet>
