got ids working on add slayer

--- a/src/app/add-slayer/add-slayer.component.html
+++ b/src/app/add-slayer/add-slayer.component.html
@@ -1,7 +1,4 @@
 <form [formGroup]="newSlayer" (ngSubmit)="onSubmit()">
-    <!-- <p>
-        <input type="text" id="id" name="id" placeholder="id" formControlName="id" value="getId()">
-    </p> -->
     <p>
         <input type="text" id="name" name="name" placeholder="Name" formControlName="name">
     </p>
@@ -14,9 +11,14 @@
     <p>
         <input type="text" id="breathingTechnique" name="breathingTechnique" placeholder="Breathing Technique" formControlName="breathingTechnique">
     </p>
-    <p>
-        <input type="text" id="slayerSound" name="slayerSound" placeholder="Sound" formControlName="slayerSound">
-    </p>
+    <div formGroupName="slayerSound">
+        <p>
+            <input type="text" id="audio" name="audio" placeholder="Audio" formControlName="audio">
+        </p>
+        <p>
+            <input type="text" id="buttonText" name="buttonText" placeholder="Button Text" formControlName="buttonText">
+        </p>
+    </div>
     <p>
         <input type="text" id="image" name="image" placeholder="Image" formControlName="image">
     </p>
