--- a/src/app/add-slayer/add-slayer.component.html
+++ b/src/app/add-slayer/add-slayer.component.html
@@ -16,13 +16,15 @@
         </p>
         <div formGroupName="slayerSound">
             <p>
-                <input type="text" id="audio" name="audio" placeholder="Audio" formControlName="audio">
+                <label for="audio">Slayer Audio File</label>
+                <input type="text" id="audio" name="audio" placeholder="Audio" formControlName="audio" >
             </p>
             <p>
                 <input type="text" id="buttonText" name="buttonText" placeholder="Button Text" formControlName="buttonText">
             </p>
         </div>
         <p>
+            <label for="image">Slayer Image</label>
             <input type="text" id="image" name="image" placeholder="Image" formControlName="image">
         </p>
         <p>
