--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
-<app-slayers></app-slayers>
-<app-add-slayer></app-add-slayer>
-<app-messages></app-messages>
-  
+<nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/slayers">Slayers</a>
+</nav>
 <router-outlet></router-outlet>
+<app-messages></app-messages>
