--- a/src/app/slayer-detail/slayer-detail.component.css
+++ b/src/app/slayer-detail/slayer-detail.component.css
@@ -1,7 +1,29 @@
+/* HeroDetailComponent's private CSS styles */
+
+label {
+    color: #435960;
+    font-weight: bold;
+}
+
 input {
-    padding: 0;
-    font-size: 16px;
-    background-color: transparent;
-    border: none;
-    font-weight: 400;
+    font-size: 1em;
+    padding: .5rem;
+}
+
+button {
+    margin-top: 20px;
+    background-color: #eee;
+    padding: 1rem;
+    border-radius: 4px;
+    font-size: 1rem;
+}
+
+button:hover {
+    background-color: #cfd8dc;
+}
+
+button:disabled {
+    background-color: #eee;
+    color: #ccc;
+    cursor: auto;
 }
