get data from a server

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <h2>Top Slayers</h2>
 <div class="slayers-menu">
-  <a *ngFor="let slayer of slayers" routerLink="/detail/{{slayer.id}}">
-    {{slayer.name}}
+  <a *ngFor="let slayer of slayers" 
+      routerLink="/detail/{{slayer.id}}">
+      {{slayer.name}}
   </a>
 </div>
+
+<app-slayer-search></app-slayer-search>
